--- a/FinanceFusion.csproj
+++ b/FinanceFusion.csproj
@@ -10,6 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.5.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="OfficeOpenXml.Core.ExcelPackage" Version="1.0.0" />
     <PackageReference Include="System.Windows.Forms.DataVisualization" Version="1.0.0-prerelease.20110.1" />
