Dashboard relatd changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;Username=postgres;Password=P0$t;"
+        "DefaultConnection": "Server=cipg01;Port=5432;Database=intern088;Username=postgres;Password=123456;"
     },
     "Theme": {
         "IsDarkMode": false
